Fixed issue with search result word wrapping

--- a/client/stylesheets/templates/_morphSearch.less
+++ b/client/stylesheets/templates/_morphSearch.less
@@ -223,8 +223,6 @@ input[type="search"] { /* reset normalize */
 
 .morphsearch.open .morphsearch-content {
 	opacity: 1;
-	overflow: auto;
-	white-space: nowrap;
 	height: 75%;
 	pointer-events: auto;
 	-webkit-transition: opacity 0.3s 0.5s;
